force-app/main/default/objects/pse__Assignment__c/fields/Assignment_Account__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Account__c</fullName>
    <formula>pse__Resource__r.Account.Name</formula>
    <label>Assignment Account</label>
    <type>Text</type>
</CustomField>