force-app/main/default/objects/pse__Assignment__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <formula>TEXT(pse__Resource__r.pse__Resource_Role__c)</formula>
    <label>Contact Role</label>
    <type>Text</type>
</CustomField>