force-app/main/default/objects/pse__Assignment__c/fields/Inconsistent_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Inconsistent_Bill_Rate__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(pse__Resource_Request__c)),
    NOT(ISBLANK(pse__Resource_Request__r.pse__Requested_Bill_Rate__c)),
    NOT(ROUND(pse__Resource_Request__r.pse__Requested_Bill_Rate__c,2) = ROUND(pse__Bill_Rate__c,2))
  ),
  TRUE,
  FALSE
)</formula>
    <label>Inconsistent Bill Rate</label>
    <type>Checkbox</type>
</CustomField>