force-app/main/default/objects/pse__Assignment__c/fields/Is_Resource_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Resource_Active__c</fullName>
    <formula>pse__Resource__r.pse__Is_Resource_Active__c</formula>
    <label>Is Resource Active</label>
    <type>Checkbox</type>
</CustomField>