force-app/main/default/objects/pse__Assignment__c/fields/Partner_Collaboration_Score_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Collaboration_Score_Number__c</fullName>
    <formula>VALUE(LEFT(TEXT(Partner_Collaboration_Score__c),1))</formula>
    <label>Partner Collaboration Score (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>