force-app/main/default/objects/pse__Assignment__c/fields/Partner_Delivery_Score__c.field-meta.xml
<CustomField>
    <fullName>Partner_Delivery_Score__c</fullName>
    <label>Partner Delivery Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Lowest</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - Highest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>