force-app/main/default/objects/pse__Assignment__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>pse__Project__r.pse__Practice__r.Name</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>