force-app/main/default/objects/pse__Assignment__c/fields/pse__Billable_Hours_In_Financials__c.field-meta.xml
<CustomField>
    <fullName>pse__Billable_Hours_In_Financials__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Billable Hours In Financials</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>