force-app/main/default/objects/pse__Assignment__c/fields/pse__Exclude_from_Planners__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_from_Planners__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to exclude this assignment from the Resource Planner and Project Planner. NOTE: any excluded assignments will not be included totals calculations and color coding within the planners.</inlineHelpText>
    <label>Exclude from Planners</label>
    <type>Checkbox</type>
</CustomField>