force-app/main/default/objects/pse__Assignment__c/fields/Remaining_Hours_by_Week__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours_by_Week__c</fullName>
    <formula>IF(
  OR(
    Remaining_Hours__c &lt;= 0,
    Remaining_Weekdays__c &lt;= 0
  ),
  0,
  (Remaining_Hours__c / Remaining_Weekdays__c)*5
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Hours (by Week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>