force-app/main/default/objects/pse__Assignment__c/fields/Remaining_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Weekdays__c</fullName>
    <formula>IF(
  pse__End_Date__c &gt;TODAY(),
  CASE(MOD( TODAY() - pse__End_Date__c,7), 
  0 , CASE( MOD( pse__End_Date__c- TODAY(),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( pse__End_Date__c- TODAY(),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( pse__End_Date__c- TODAY(),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( pse__End_Date__c- TODAY(),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( pse__End_Date__c- TODAY(),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( pse__End_Date__c- TODAY(),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( pse__End_Date__c- TODAY(),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( pse__End_Date__c- TODAY())/7)*5),
  0
)</formula>
    <label>Remaining Weekdays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>