force-app/main/default/objects/pse__Assignment__c/fields/Requested_Hours_Variance__c.field-meta.xml
<CustomField>
    <fullName>Requested_Hours_Variance__c</fullName>
    <formula>Assigned_Hours__c - pse__Resource_Request__r.pse__SOW_Hours__c</formula>
    <label>Requested Hours Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>