force-app/main/default/objects/pse__Assignment__c/fields/Scheduled_Effort__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Effort__c</fullName>
    <description>Scheduled effort in days</description>
    <label>Scheduled Hours - Override</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>