force-app/main/default/objects/pse__Assignment__c/fields/Start_Override__c.field-meta.xml
<CustomField>
    <fullName>Start_Override__c</fullName>
    <label>Start - Override</label>
    <type>Date</type>
</CustomField>