force-app/main/default/objects/pse__Assignment__c/fields/T_M_Assignment__c.field-meta.xml
<CustomField>
    <fullName>T_M_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T&amp;M Assignment</label>
    <type>Checkbox</type>
</CustomField>