force-app/main/default/objects/pse__Assignment__c/fields/Technical_Lead__c.field-meta.xml
<CustomField>
    <fullName>Technical_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you would like to delegate a technical lead for the project.</inlineHelpText>
    <label>Technical Lead</label>
    <type>Checkbox</type>
</CustomField>