force-app/main/default/objects/pse__Assignment__c/fields/Total_Hours_in_Financials__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_in_Financials__c</fullName>
    <formula>pse__Billable_Hours_In_Financials__c+pse__Non_Billable_Hours_In_Financials__c</formula>
    <label>Total Hours in Financials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>