force-app/main/default/objects/pse__Assignment__c/fields/Training_Role__c.field-meta.xml
<CustomField>
    <fullName>Training_Role__c</fullName>
    <label>Training Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
            <value>
                <fullName>Technical QA</fullName>
            </value>
            <value>
                <fullName>Technical Team</fullName>
            </value>
            <value>
                <fullName>CID Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>