force-app/main/default/objects/pse__Assignment__c/validationRules/Billable_Rate_Cannot_equal_0_TM.validationRule-meta.xml
<ValidationRule>
    <fullName>Billable_Rate_Cannot_equal_0_TM</fullName>
    <active>false</active>
    <description>T&amp;M assignments may not have a Bill Rate of 0.</description>
    <errorConditionFormula>AND(
   T_M_Assignment__c=TRUE,
   pse__Bill_Rate__c=0,
   NOT($Profile.Id=&quot;00e30000000bvR3&quot;)
)</errorConditionFormula>
    <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
    <errorMessage>The bill rate for T&amp;M assignments may not be zero. Please contact PS Ops if you need assistance.</errorMessage>
</ValidationRule>