force-app/main/default/objects/pse__Assignment__c/validationRules/Billable_Rate_has_to_be_0_Fixed_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Billable_Rate_has_to_be_0_Fixed_Price</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   ISPICKVAL(pse__Project__r.pse__Billing_Type__c,&quot;Fixed Price&quot;),
   NOT(pse__Bill_Rate__c=0),
   NOT($Profile.Id=&quot;00e30000000bvR3&quot;)
)</errorConditionFormula>
    <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
    <errorMessage>For fixed fee projects, the bill rate has to be zero. Please contact PS Ops if you need assistance.</errorMessage>
</ValidationRule>