force-app/main/default/objects/pse__Assignment__c/validationRules/Cannot_change_dates_hours_at_same_time.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_dates_hours_at_same_time</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  OR(
    ISCHANGED(Start_Override__c),
    ISCHANGED(End_Override__c)
  ),
  ISCHANGED(Scheduled_Effort__c),
  NOT($Profile.Id=&quot;00e30000000bvR3&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot edit both the override dates and the hours at the same time. Please do so one at a time.</errorMessage>
</ValidationRule>