force-app/main/default/objects/pse__Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>pse__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>pse__Project__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>Requested_Hours__c</columns>
    <columns>pse__Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>Remaining_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/31/2015</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Tentative,Scheduled</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>12/31/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>pse__Role__c</field>
        <operation>equals</operation>
        <value>Solution Engineer,Solutions Architect</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>