force-app/main/default/objects/pse__Assignment__c/listViews/Assignments_Schedule_Update_Needed2.listView-meta.xml
<ListView>
    <fullName>Assignments_Schedule_Update_Needed2</fullName>
    <columns>pse__Project__c</columns>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>Assigned_Hours__c</columns>
    <columns>Total_Hours_in_Financials__c</columns>
    <columns>Requested_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remaining_Hours__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Project_Billing_Type__c</field>
        <operation>notEqual</operation>
        <value>Partner Prime</value>
    </filters>
    <label>Assignments Schedule Update Needed</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>