force-app/main/default/objects/pse__Assignment__c/listViews/Chris_Cistone1.listView-meta.xml
<ListView>
    <fullName>Chris_Cistone1</fullName>
    <columns>pse__Project__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Remaining_Hours__c</columns>
    <columns>Requested_Hours__c</columns>
    <columns>Total_Hours_in_Financials__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>T_M_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>Cistone</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>contains</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>pse__Closed_for_Time_Entry__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Chris Cistone&apos;s Assignment Hours</label>
    <language>en_US</language>
</ListView>