force-app/main/default/objects/pse__Assignment__c/listViews/Christi_s_Rev_Project_Assignments1.listView-meta.xml
<ListView>
    <fullName>Christi_s_Rev_Project_Assignments1</fullName>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>Remaining_Hours__c</columns>
    <columns>pse__Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>Start_Override__c</columns>
    <columns>End_Override__c</columns>
    <columns>Scheduled_Effort__c</columns>
    <columns>pse__Planned_Hours__c</columns>
    <columns>pse__Billable_Hours_Submitted__c</columns>
    <columns>Total_Hours_in_Financials__c</columns>
    <columns>pse__Schedule__c</columns>
    <columns>T_M_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Manager__c</field>
        <operation>equals</operation>
        <value>Tim Haley</value>
    </filters>
    <label>Rev Project Assignments</label>
    <sharedTo>
        <role>DirectorProfessionalServices</role>
        <role>ProjectManager</role>
    </sharedTo>
</ListView>