force-app/main/default/objects/pse__Assignment__c/listViews/Christine_Novo_s_Projects.listView-meta.xml
<ListView>
    <fullName>Christine_Novo_s_Projects</fullName>
    <columns>pse__Project__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Remaining_Hours__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Assigned_Hours__c</columns>
    <columns>Total_Hours_in_Financials__c</columns>
    <columns>pse__Planned_Hours__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>T_M_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>Randall</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Open - Not Started,Open - In Process,Open - On Hold</value>
    </filters>
    <label>Mandy&apos;s Projects</label>
    <language>en_US</language>
    <sharedTo>
        <group>Professional_Services</group>
    </sharedTo>
</ListView>