force-app/main/default/objects/pse__Assignment__c/listViews/Christine_Novo_s_Projects1.listView-meta.xml
<ListView>
    <fullName>Christine_Novo_s_Projects1</fullName>
    <columns>pse__Project__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>pse__Planned_Hours__c</columns>
    <columns>Remaining_Hours__c</columns>
    <columns>Assigned_Hours__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>Brewer</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Open - Not Started,Open - In Process,Open - On Hold</value>
    </filters>
    <filters>
        <field>pse__Closed_for_Time_Entry__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Ethan&apos;s Assignments</label>
    <sharedTo>
        <group>Professional_Services</group>
    </sharedTo>
</ListView>