force-app/main/default/objects/pse__Assignment__c/listViews/Dmitry_Doron_s_Assignment_Hours.listView-meta.xml
<ListView>
    <fullName>Dmitry_Doron_s_Assignment_Hours</fullName>
    <columns>pse__Project__c</columns>
    <columns>Remaining_Hours__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Requested_Hours__c</columns>
    <columns>Total_Hours_in_Financials__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>T_M_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>doron</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Open - Not Started,Open - In Process,Open - On Hold</value>
    </filters>
    <filters>
        <field>pse__Project__c</field>
        <operation>notContain</operation>
        <value>Internal - North America Admin Productive</value>
    </filters>
    <filters>
        <field>pse__Closed_for_Time_Entry__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Dmitry Doron&apos;s Assignment Hours</label>
    <language>en_US</language>
</ListView>